--- a/appspec.yml
+++ b/appspec.yml
@@ -11,15 +11,15 @@ permissions:
     owner: ec2-user
     group: ec2-user
 
-# hooks:
+hooks:
   # BeforeInstall:
   #   - location: scripts/install_dependencies.sh
   #     timeout: 300
   #     runas: root
-  # AfterInstall:
-  #   - location: scripts/after_install.sh
-  #     timeout: 300
-  #     runas: ec2-usesr
+  AfterInstall:
+    - location: scripts/after_install.sh
+      timeout: 300
+      runas: ec2-usesr
   # ApplicationStart:
   #   - location: scripts/start_server.sh
   #   - location: scripts/create_test_db.sh
