--- a/appspec.yml
+++ b/appspec.yml
@@ -19,7 +19,7 @@ hooks:
   AfterInstall:
     - location: scripts/after_install.sh
       timeout: 300
-      runas: ec2-usesr
+      runas: ec2-user
   # ApplicationStart:
   #   - location: scripts/start_server.sh
   #   - location: scripts/create_test_db.sh
