--- a/.github/workflows/kr.yml
+++ b/.github/workflows/kr.yml
@@ -54,7 +54,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ REGION }}
+        aws-region: ${{ env.REGION }}
 
     - name: Upload to S3
       run: aws s3 cp --region $REGION ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip
