--- a/.github/workflows/us.yml
+++ b/.github/workflows/us.yml
@@ -4,10 +4,10 @@
 name: app-us
 
 on:
-#   push:
-#     branches: [ "master" ]
-#   pull_request:
-#     branches: [ "master" ]
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
   workflow_dispatch:
 
 permissions:
